--- a/index.html
+++ b/index.html
@@ -4,34 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bass Note Guessing Game</title>
-  <!-- Pitch detection library (YIN algorithm) -->
+  <!-- Pitch detection library -->
   <script src="https://cdn.jsdelivr.net/npm/pitchfinder@1.3.2/dist/pitchfinder.min.js"></script>
   <style>
+    :root {
+      --bg: #111;
+      --fg: #eee;
+      --accent: #f43;
+      --neck: #333;
+      --string: #777;
+      --fret: #555;
+    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: system-ui, sans-serif;
-      background: #111;
-      color: #eee;
+      background: var(--bg);
+      color: var(--fg);
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
       height: 100vh;
       overflow: hidden;
+      padding: 1rem;
     }
-    header {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      margin-top: 1rem;
-    }
-    #target-note {
-      font-size: 2rem;
-      font-weight: 700;
-    }
+    header { display: flex; align-items: center; gap: 0.75rem; flex-wrap: wrap; }
+    #target-note { font-size: 2rem; font-weight: 700; }
     button, label {
       background: #222;
-      color: #eee;
+      color: var(--fg);
       border: none;
       padding: 0.5rem 1rem;
       border-radius: 0.5rem;
@@ -41,7 +43,7 @@
       width: 90vw;
       max-width: 1000px;
       aspect-ratio: 5 / 1;
-      background: #333;
+      background: var(--neck);
       border-radius: 1rem;
       position: relative;
       overflow: hidden;
@@ -50,7 +52,7 @@
       position: absolute;
       height: 4px;
       width: 100%;
-      background: #777;
+      background: var(--string);
       left: 0;
     }
     .fret-line {
@@ -58,22 +60,20 @@
       top: 0;
       width: 2px;
       height: 100%;
-      background: #555;
+      background: var(--fret);
     }
-    .marker {
+    .marker, .inlay {
       position: absolute;
-      width: 18px;
-      height: 18px;
       border-radius: 50%;
-      background: #f00;
       transform: translate(-50%, -50%);
       pointer-events: none;
     }
-    #message {
-      font-size: 1.25rem;
-      font-weight: 600;
-      min-height: 1.5rem;
-    }
+    .marker { width: 18px; height: 18px; background: var(--accent); }
+    .inlay { width: 14px; height: 14px; background: var(--fg); opacity: 0.3; }
+    .inlay.double { width: 12px; height: 12px; }
+    #message { font-size: 1.25rem; font-weight: 600; min-height: 1.5rem; text-align: center; }
+    #tuner { font-size: 1.5rem; font-family: monospace; min-height: 2rem; }
+    #detected-note { font-weight: 700; margin-right: 0.5rem; }
   </style>
 </head>
 <body>
@@ -82,16 +82,16 @@
     <span id="target-note">---</span>
     <button id="skip-btn">Show me the correct note</button>
     <label>
-      <input type="checkbox" id="stringMode" />
-      Specify String
+      <input type="checkbox" id="stringMode" /> Specify String
     </label>
   </header>
 
-  <div id="message"></div>
+  <div id="message">Play the note!</div>
+  <div id="tuner"><span id="detected-note">--</span><span id="detected-cents"></span></div>
   <div id="fretboard"></div>
 
   <script>
-    /***** CONFIG *****/
+    /************ CONFIG ************/
     const strings = [
       { name: "G", openFreq: 98.0, midi: 43 }, // G2
       { name: "D", openFreq: 73.42, midi: 38 }, // D2
@@ -100,39 +100,58 @@
     ];
     const lowestMidi = 28; // E1
     const highestMidi = 62; // D4
+    const fretCount = 20;
+    const inlayFrets = [3, 5, 7, 9, 12, 15, 17, 19];
 
-    /***** STATE *****/
+    /************ STATE & DOM ************/
     let target = null; // { midi, name, stringIndex|null, fret|null }
+    let waiting = false;
 
-    /***** DOM Elements *****/
     const targetEl = document.getElementById("target-note");
     const boardEl = document.getElementById("fretboard");
     const messageEl = document.getElementById("message");
     const skipBtn = document.getElementById("skip-btn");
     const stringModeChk = document.getElementById("stringMode");
+    const tunerNoteEl = document.getElementById("detected-note");
+    const tunerCentsEl = document.getElementById("detected-cents");
 
-    /***** BUILD STATIC BOARD *****/
-    const fretCount = 20;
-    const paddingTop = 20;
-    const stringGap = (boardEl.clientHeight - paddingTop * 2) / (strings.length - 1);
-    // Draw strings
-    strings.forEach((s, i) => {
-      const y = paddingTop + i * stringGap;
-      const line = document.createElement("div");
-      line.className = "string-line";
-      line.style.top = y + "px";
-      boardEl.appendChild(line);
-    });
-    // Draw frets
-    for (let f = 0; f <= fretCount; f++) {
-      const x = (f / fretCount) * 100;
-      const line = document.createElement("div");
-      line.className = "fret-line";
-      line.style.left = x + "%";
-      boardEl.appendChild(line);
+    /************ BUILD FRETBOARD ************/
+    let paddingTop, stringGap;
+    function buildBoard() {
+      boardEl.innerHTML = ""; // reset if rebuilding
+      paddingTop = 20;
+      stringGap = (boardEl.clientHeight - paddingTop * 2) / (strings.length - 1);
+
+      // strings
+      strings.forEach((s, i) => {
+        const y = paddingTop + i * stringGap;
+        const line = document.createElement("div");
+        line.className = "string-line";
+        line.style.top = y + "px";
+        boardEl.appendChild(line);
+      });
+      // frets
+      for (let f = 0; f <= fretCount; f++) {
+        const line = document.createElement("div");
+        line.className = "fret-line";
+        line.style.left = `${(f / fretCount) * 100}%`;
+        boardEl.appendChild(line);
+      }
+      // inlays
+      inlayFrets.forEach(f => {
+        const xPct = ((f - 0.5) / fretCount) * 100;
+        const inlay = document.createElement("div");
+        inlay.className = "inlay";
+        if (f === 12) inlay.classList.add("double");
+        inlay.style.left = `${xPct}%`;
+        inlay.style.top = `${boardEl.clientHeight / 2}px`;
+        boardEl.appendChild(inlay);
+      });
     }
+    // Build after layout paint
+    requestAnimationFrame(buildBoard);
 
-    /***** AUDIO INIT *****/
+    /************ AUDIO INIT ************/
     let audioCtx, analyser, dataArray, yinDetector;
     async function initAudio() {
       audioCtx = new (window.AudioContext || window.webkitAudioContext)();
@@ -149,88 +168,81 @@
     function listenLoop() {
       analyser.getFloatTimeDomainData(dataArray);
       const freq = yinDetector(dataArray);
+      updateTuner(freq);
       if (freq) verifyPitch(freq);
       requestAnimationFrame(listenLoop);
     }
 
-    /***** HELPERS *****/
+    /************ HELPERS ************/
     function midiToName(m) {
       const names = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B"];
       return names[m % 12] + Math.floor(m / 12 - 1);
     }
-    function freqToMidi(f) {
-      return Math.round(12 * Math.log2(f / 440) + 69);
+    function freqToMidiFloat(f) {
+      return 69 + 12 * Math.log2(f / 440);
     }
+    function roundedMidi(f) { return Math.round(freqToMidiFloat(f)); }
+    function midiToFreq(m) { return 440 * Math.pow(2, (m - 69) / 12); }
+    function randomInt(min, max) { return Math.floor(Math.random() * (max - min + 1)) + min; }
 
+    /************ GAME LOGIC ************/
     function generateTarget() {
       const specific = stringModeChk.checked;
       const midi = randomInt(lowestMidi, highestMidi);
-      let stringIndex = null;
-      let fret = null;
+      let stringIndex = null, fret = null;
       if (specific) {
-        // pick valid string & fret
-        const options = strings
-          .map((s, idx) => {
-            const fretNum = Math.round(12 * Math.log2(midiToFreq(midi) / s.openFreq));
-            return fretNum >= 0 && fretNum <= fretCount ? { idx, fretNum } : null;
-          })
-          .filter(Boolean);
-        const choice = options[Math.floor(Math.random() * options.length)];
-        stringIndex = choice.idx;
-        fret = choice.fretNum;
+        // choose string that can play the note within 0-20 frets
+        const valid = strings.map((s, idx) => {
+          const f = Math.round(12 * Math.log2(midiToFreq(midi) / s.openFreq));
+          return f >= 0 && f <= fretCount ? { idx, f } : null;
+        }).filter(Boolean);
+        const pick = valid[Math.floor(Math.random() * valid.length)];
+        stringIndex = pick.idx;
+        fret = pick.f;
       }
       target = { midi, name: midiToName(midi), stringIndex, fret };
+      // display
       targetEl.textContent = specific && stringIndex !== null
-        ? `${target.name} on ${strings[stringIndex].name} string (fret ${fret})`
+        ? `${target.name} on ${strings[stringIndex].name} string`
         : target.name;
-      clearMarkers();
       messageEl.textContent = "Play the note!";
+      clearMarkers();
     }
 
-    function midiToFreq(m) {
-      return 440 * Math.pow(2, (m - 69) / 12);
-    }
-
-    function randomInt(min, max) {
-      return Math.floor(Math.random() * (max - min + 1)) + min;
-    }
-
-    /***** VERIFY *****/
-    let waiting = false;
     function verifyPitch(freq) {
       if (waiting) return;
-      const detected = freqToMidi(freq);
-      if (detected === target.midi) {
+      const detMidi = roundedMidi(freq);
+      if (detMidi === target.midi) {
         waiting = true;
         messageEl.textContent = "Correct!";
         showMarkers();
-        setTimeout(() => {
-          waiting = false;
-          generateTarget();
-        }, 1500);
+        setTimeout(() => { waiting = false; generateTarget(); }, 1500);
       }
     }
 
-    /***** FRETBOARD MARKERS *****/
-    function clearMarkers() {
-      document.querySelectorAll(".marker").forEach((m) => m.remove());
+    /************ TUNER VIEW ************/
+    function updateTuner(freq) {
+      if (!freq) { tunerNoteEl.textContent = "--"; tunerCentsEl.textContent = ""; return; }
+      const mf = freqToMidiFloat(freq);
+      const nearest = Math.round(mf);
+      const cents = (mf - nearest) * 100;
+      tunerNoteEl.textContent = midiToName(nearest);
+      tunerCentsEl.textContent = `${cents >= 0 ? "+" : ""}${cents.toFixed(0)}¢`;
     }
 
+    /************ FRETBOARD MARKERS ************/
+    function clearMarkers() { document.querySelectorAll(".marker").forEach(m => m.remove()); }
     function showMarkers() {
       clearMarkers();
       const positions = getPositionsForMidi(target.midi, target.stringIndex);
-      positions.forEach((pos) => {
-        const [idx, fret] = pos;
-        const y = paddingTop + idx * stringGap;
-        const x = (fret / fretCount) * boardEl.clientWidth;
+      positions.forEach(([idx, fret]) => {
         const marker = document.createElement("div");
         marker.className = "marker";
-        marker.style.top = y + "px";
-        marker.style.left = x + "px";
+        marker.style.top = `${paddingTop + idx * stringGap}px`;
+        marker.style.left = `${(fret / fretCount) * boardEl.clientWidth}px`;
         boardEl.appendChild(marker);
       });
     }
-
     function getPositionsForMidi(midi, specificIdx = null) {
       const arr = [];
       strings.forEach((s, idx) => {
@@ -241,11 +253,12 @@
       return arr;
     }
 
-    /***** EVENTS *****/
+    /************ EVENTS ************/
     skipBtn.addEventListener("click", showMarkers);
     stringModeChk.addEventListener("change", generateTarget);
+    window.addEventListener("resize", () => { buildBoard(); showMarkers(); });
 
-    /***** START *****/
+    /************ START ************/
     generateTarget();
     initAudio();
   </script>
